{
    "name": "Keyboard",
    "maps": [
        {
            "name": "PlayerMusic",
            "id": "cf9712b7-b775-421a-a50c-b650ca7265db",
            "actions": [
                {
                    "name": "Key0",
                    "type": "Button",
                    "id": "327b2231-4911-43bd-970f-0c62e453b99f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key1",
                    "type": "Button",
                    "id": "d958e850-b71a-4139-9464-b127703eaad3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key2",
                    "type": "Button",
                    "id": "dcf9f2d2-2d5d-4f13-b0fd-5c412dafd4ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key3",
                    "type": "Button",
                    "id": "7b318e14-f3b8-4f71-b507-8d80b1007a7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key4",
                    "type": "Button",
                    "id": "1fbf68ef-2ab5-47e0-847e-fd8ba3968209",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key5",
                    "type": "Button",
                    "id": "910481b8-3e00-40a4-aeb2-9cfb49e3a9d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key6",
                    "type": "Button",
                    "id": "1239454a-a509-4329-9e9c-3660fa730090",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key7",
                    "type": "Button",
                    "id": "8df7faea-f53b-4cd2-8d1a-05dc13c35bd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key8",
                    "type": "Button",
                    "id": "2c9df1d5-af30-4760-8227-05302e0986aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key9",
                    "type": "Button",
                    "id": "a5956aba-0be5-4271-9818-03c2b95377b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleMovePlay",
                    "type": "Button",
                    "id": "8e6f2152-d568-4d61-8633-b5710b3aadec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a151d539-3f6c-41dd-99c9-7097af7f6d0d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d4f1a99-d397-4228-99a2-593c76f61175",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39b151a7-5316-4dd6-bab9-ff179a6a5a43",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fd3c250-b5d2-4a31-8117-ee320d689aa0",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e762eedd-8ba8-44b8-b408-0409d4689f36",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c8a3f63-972b-4166-a5bf-5351ff3c5aaf",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "349e8091-8961-4713-8fc8-8bea3c19db79",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3492a68c-8597-49af-84a7-2a8dfd93d36a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c402a32-5e19-4b77-ae92-0e83b6faa5a2",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86fef40c-b128-4ffb-948b-6d9f0f533294",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dac03a3-9308-4b49-9418-a8d426e5d7ea",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMovePlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMove",
            "id": "91017526-8567-4d03-94ff-ac0f67681da1",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "190dc45b-2f4c-4c9a-b5c8-58e8f47da489",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19c5ffb5-87b9-4e8f-a498-7cf5d9e1c7a4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}